package org.xiaoxiancai.imhere.server.business.protos;

option java_package = "org.xiaoxiancai.imhere.common.protos.business";
option java_outer_classname = "RegisterRequestProtos";

message RegisterRequest {
  
	required string mobile = 1;

	required string password = 2;
	
	required string nickName = 3;
  
	optional string email = 4;
  
	optional string signature = 5;

}
